<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperCalculater</string>
    <string name="realestatent_loan">RealEstatent Loan Calculator</string>
    <string name="realestatent_loan_result">RealEstatent Loan Calculator Result</string>
    <string name="action_settings">Settings</string>
    <string name="commercial_loan">Commercial Loans</string>
    <string name="loan_year">Loan Year</string>
    <string name="Gongjj_loan">Gongjj Loans:</string>
    <string name="commercial_loan_rate">commercial loan rate</string>
    <string name="Gongjj_loan_rate">Gongjj_loan_rate</string>
    <string name="loan_rate">Loan Rate</string>
    <string name="colon">:</string>
    <string name="year_str">Y</string>
    <string name="year_str_default">20</string>
    <string name="loan_sytle_text">Loan Style</string>
    <string name="loan_sytle_text1">Loan Style one</string>
    <string name="loan_sytle_text2">Loan Style two</string>

    <string-array name="loan_sytle">
        <item>same return total</item>
        <item>same return base loan</item>
    </string-array>

    <string name="wang">W</string>

    <string-array name="rate_array">
        <item>July 6, 2012 rate (1.3)</item>
        <item>July 6, 2012 rate (1.2)</item>
        <item>July 6, 2012 rate (1.1)</item>
        <item>July 6, 2012 rate</item>
        <item>July 6, 2012 rate (0.95)</item>
        <item>July 6, 2012 rate (0.9)</item>
        <item>July 6, 2012 rate (0.85)</item>
        <item>July 6, 2012 rate (0.80)</item>
        <item>July 6, 2012 rate (0.75)</item>
        <item>July 6, 2012 rate (0.7)</item>
    </string-array>
    <string-array name="loan_year_array">
        <item>1Y</item>
        <item>2Y</item>
        <item>3Y</item>
        <item>4Y</item>
        <item>5Y</item>
        <item>6Y</item>
        <item>7Y</item>
        <item>8Y</item>
        <item>9Y</item>
        <item>10Y</item>
        <item>11Y</item>
        <item>12Y</item>
        <item>13Y</item>
        <item>14Y</item>
        <item>15Y</item>
        <item>16Y</item>
        <item>17Y</item>
        <item>18Y</item>
        <item>19Y</item>
        <item>20Y</item>
        <item>21Y</item>
        <item>22Y</item>
        <item>23Y</item>
        <item>24Y</item>
        <item>25Y</item>
        <item>26Y</item>
        <item>27Y</item>
        <item>28Y</item>
        <item>29Y</item>
        <item>30Y</item>
    </string-array>

    <string name="start_calculater">Start Calc</string>
    <string name="reset_calculater">Reset Calc</string>
    <string name="header_time">Times</string>
    <string name="header_interest">Interest</string>
    <string name="header_captial">Capital</string>
    <string name="header_return">Repay</string>
    <string name="header_least_captial">Remaining</string>
    <string name="header_loan_total">Loan Total</string>
    <string name="header_return_total">Repay Total</string>
    <string name="header_loan_month">Loan Month</string>
    <string name="header_total_interest">Total Interest</string>
    <string name="header_rate_commercial">Commercial Rate</string>
    <string name="header_rate_gongjj">Gongjj Rate</string>
    <string name="header_repay_month">Repay Month</string>
    <string name="default_edit_text">0</string>
    <string name="progress_dialog_title">loading</string>
    <string name="homepage_back_dialog_message">Please go to see the app list wall</string>
    <string name="homepage_back_dialog_title">prompting</string>
    <string name="homepage_dialog_ok">OK</string>
    <string name="homepage_dialog_cancel">Cancel</string>
    <string name="homepage_dialog_applist">Applist</string>
    <string name="alert_no_loan">Please edit the loan</string>
</resources>